tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -69,7 +69,7 @@
                     "mtime": 1668263534.4549596
                 },
                 "2022": {
-                    "name": "",
+                    "name": "2022",
                     "type": "directory",
                     "sub": {
                         "seccon-quals": {
