tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -551,7 +551,7 @@
                     "type": "leaf",
                     "link_list": [
                         {
-                            "name": "h3ran",
+                            "name": "h3arn",
                             "description": "dalao",
                             "link": "https://h3a.moe"
                         }
