tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -129,97 +129,7 @@
                         "survey": {
                             "name": "实体对齐文献阅读笔记",
                             "type": "article",
-                            "mtime": 1668434954.8239324,
-                            "sub": {
-                                "Entity_Alignment_Papers": {
-                                    "name": "",
-                                    "type": "directory",
-                                    "sub": {
-                                        ".git": {
-                                            "name": "",
-                                            "type": "directory",
-                                            "sub": {
-                                                "branches": {
-                                                    "name": "",
-                                                    "type": "directory"
-                                                },
-                                                "hooks": {
-                                                    "name": "",
-                                                    "type": "directory"
-                                                },
-                                                "info": {
-                                                    "name": "",
-                                                    "type": "directory"
-                                                },
-                                                "logs": {
-                                                    "name": "",
-                                                    "type": "directory",
-                                                    "sub": {
-                                                        "refs": {
-                                                            "name": "",
-                                                            "type": "directory",
-                                                            "sub": {
-                                                                "heads": {
-                                                                    "name": "",
-                                                                    "type": "directory"
-                                                                },
-                                                                "remotes": {
-                                                                    "name": "",
-                                                                    "type": "directory",
-                                                                    "sub": {
-                                                                        "origin": {
-                                                                            "name": "",
-                                                                            "type": "directory"
-                                                                        }
-                                                                    }
-                                                                }
-                                                            }
-                                                        }
-                                                    }
-                                                },
-                                                "objects": {
-                                                    "name": "",
-                                                    "type": "directory",
-                                                    "sub": {
-                                                        "info": {
-                                                            "name": "",
-                                                            "type": "directory"
-                                                        },
-                                                        "pack": {
-                                                            "name": "",
-                                                            "type": "directory"
-                                                        }
-                                                    }
-                                                },
-                                                "refs": {
-                                                    "name": "",
-                                                    "type": "directory",
-                                                    "sub": {
-                                                        "heads": {
-                                                            "name": "",
-                                                            "type": "directory"
-                                                        },
-                                                        "remotes": {
-                                                            "name": "",
-                                                            "type": "directory",
-                                                            "sub": {
-                                                                "origin": {
-                                                                    "name": "",
-                                                                    "type": "directory"
-                                                                }
-                                                            }
-                                                        },
-                                                        "tags": {
-                                                            "name": "",
-                                                            "type": "directory"
-                                                        }
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
+                            "mtime": 1668434954.8239324
                         }
                     }
                 }
