tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -131,7 +131,7 @@
                         "survey": {
                             "name": "实体对齐文献阅读笔记",
                             "type": "article",
-                            "mtime": 1668434954.8239324
+                            "mtime": 1668484338.993437
                         }
                     }
                 }
