tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -476,7 +476,7 @@
                     "link_list": [
                         {
                             "name": "h3arn",
-                            "description": "dalao",
+                            "description": "我會常記先生好，我會常想南山幽。",
                             "link": "https://h3a.moe"
                         }
                     ]
