tsblog auto commit

--- a/config.json
+++ b/config.json
@@ -71,6 +71,11 @@
                             "name": "Windows 恢复分区移动指南",
                             "type": "article",
                             "mtime": 1668646827.22147
+                        },
+                        "apt-key-legacy": {
+                            "name": "Key is stored in legacy trusted.gpg keyring",
+                            "type": "article",
+                            "mtime": 1669199337.2976913
                         }
                     }
                 }
@@ -106,7 +111,7 @@
                         "seccon-quals": {
                             "name": "SECCON CTF 2022",
                             "type": "article",
-                            "mtime": 1668341676.620181
+                            "mtime": 1669465374.8165393
                         },
                         "SquareCTF": {
                             "name": "SquareCTF 2022",
@@ -129,12 +134,12 @@
                 "GNN": {
                     "name": "Graph Neural Network",
                     "type": "article",
-                    "mtime": 1668263643.8337023
+                    "mtime": 1668998709.815456
                 },
                 "survey": {
                     "name": "AI综述",
                     "type": "article",
-                    "mtime": 1668735832.998737
+                    "mtime": 1669294055.6864848
                 },
                 "torch": {
                     "name": "PyTorch学习笔记",
@@ -148,7 +153,7 @@
                         "survey": {
                             "name": "实体对齐文献阅读笔记",
                             "type": "article",
-                            "mtime": 1668907123.8505054
+                            "mtime": 1669344631.4968655
                         }
                     }
                 },
@@ -171,6 +176,22 @@
                             "name": "WSL配置Nvidia深度学习环境笔记",
                             "type": "article",
                             "mtime": 1668607934.4675064
+                        }
+                    }
+                },
+                "util": {
+                    "name": "",
+                    "type": "directory",
+                    "sub": {
+                        "conda": {
+                            "name": "Conda常用用法",
+                            "type": "article",
+                            "mtime": 1669028171.8621924
+                        },
+                        "torch": {
+                            "name": "Torch常用库和相关问题解决",
+                            "type": "article",
+                            "mtime": 1669257181.8025508
                         }
                     }
                 }
