--- a/config.json
+++ b/config.json
@@ -83,7 +83,20 @@
         },
         "life": {
             "name": "生活",
-            "type": "directory"
+            "type": "directory",
+            "sub": {
+                "reading": {
+                    "name": "",
+                    "type": "directory",
+                    "sub": {
+                        "战争与和平": {
+                            "name": "《战争与和平》读书笔记",
+                            "type": "article",
+                            "mtime": 1669723932.519663
+                        }
+                    }
+                }
+            }
         },
         "ctf_writeup": {
             "name": "CTF WP",
@@ -117,6 +130,11 @@
                             "name": "SquareCTF 2022",
                             "type": "article",
                             "mtime": 1668935766.8060489
+                        },
+                        "hitcon": {
+                            "name": "Hitcon 2022",
+                            "type": "article",
+                            "mtime": 1669617012.8617647
                         }
                     }
                 }
@@ -153,7 +171,7 @@
                         "survey": {
                             "name": "实体对齐文献阅读笔记",
                             "type": "article",
-                            "mtime": 1669344631.4968655
+                            "mtime": 1669723103.7540038
                         }
                     }
                 },
@@ -186,7 +204,7 @@
                         "conda": {
                             "name": "Conda常用用法",
                             "type": "article",
-                            "mtime": 1669028171.8621924
+                            "mtime": 1669550764.8279595
                         },
                         "torch": {
                             "name": "Torch常用库和相关问题解决",
